# lemmy-instance-counter

./: Cargo.toml  README.md
src/: main.rs
