[package]
name = "lemmy-instance-counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }
serde_json = "*"
serde = { version = "*", features = ["derive"] }

rand = { version = "*", features = [] }
lazy_static = { version = "*", features = [] }